--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-  "name": "movies-app-frontend",
+  "name": "movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@radix-ui/react-accessible-icon": "^1.1.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.4",
     "@radix-ui/themes": "^3.1.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "esm": "^3.2.25",
+    "formik": "^2.4.6",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.24.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generateRTK": "npx @rtk-query/codegen-openapi openapi-config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +48,10 @@
       "react-app/jest"
     ]
   },
+  "eslintIgnore": [
+    "node_modules",
+    "build/*"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -49,8 +65,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@typescript-eslint/parser": "^7.17.0",
+    "ajv": "^8.17.1",
     "react-router-dom": "^6.24.1",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.4"
   }
 }
