--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -1,14 +1,14 @@
 trigger:
   branches:
     include:
-    - main
+      - main
   paths:
     include:
-    - src/**
-    - public/**
-    - package.json
-    - tailwind.config.js
-    - postcss.config.js 
+      - src/**
+      - public/**
+      - package.json
+      - tailwind.config.js
+      - postcss.config.js
 
 resources:
   repositories:
@@ -61,3 +61,28 @@ stages:
               PathtoPublish: "build"
               ArtifactName: "drop"
               publishLocation: "Container"
+
+  - stage: Deploy
+    displayName: Deploy to Azure App Service
+    dependsOn: Build
+    jobs:
+      - deployment: Deploy
+        environment: "Production"
+        pool:
+          name: moviesagent
+          demands:
+            - Agent.Name -equals MoviesPipelineAgent
+
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: drop
+
+                - task: AzureWebApp@1
+                  inputs:
+                    azureSubscription: "Visual Studio Enterprise Subscription(e5855b08-7ae6-492b-b26a-0729c22fa918)"
+                    appType: "webApp"
+                    appName: "moviesFrontEnd"
+                    package: $(Pipeline.Workspace)/drop/**/*.zip
