--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -10,10 +10,24 @@ trigger:
       - tailwind.config.js
       - postcss.config.js
 
+pr:
+  branches:
+    include:
+      - main
+  paths:
+    include:
+      - src/**
+      - public/**
+      - package.json
+      - tailwind.config.js
+      - postcss.config.js
+
 resources:
   repositories:
     - repository: self
-      trigger: none
+      type: github
+      name: diaandrei/Movies-App-Front-End
+      ref: main
 
 stages:
   - stage: Build
@@ -63,8 +77,9 @@ stages:
               publishLocation: "Container"
 
   - stage: Deploy
-    displayName: Deploy to Azure App Service
+    displayName: Production
     dependsOn: Build
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
     jobs:
       - deployment: Deploy
         environment: "Production"
