--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -65,17 +65,12 @@ stages:
             displayName: "Build"
             continueOnError: false
 
-          # Uncomment when tests are added
-          # - script: npm test
-          #   displayName: "Run Tests"
-          #   continueOnError: false
-
-          - task: PublishBuildArtifacts@1
+          - task: PublishPipelineArtifact@1
             displayName: "Publish Artifact"
             inputs:
-              PathtoPublish: "build"
-              ArtifactName: "drop"
-              publishLocation: "Container"
+              targetPath: "$(Pipeline.Workspace)/build"
+              artifactName: "drop"
+              publishLocation: "Pipeline"
 
   - stage: Deploy
     displayName: Production
@@ -83,7 +78,7 @@ stages:
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
     jobs:
       - deployment: Deploy
-        environment: "Production"
+        environment: "Production" 
         pool:
           name: moviesagent
           demands:
@@ -94,11 +89,11 @@ stages:
             deploy:
               steps:
                 - download: current
-                  artifact: drop
+                  artifact: "drop"
 
                 - task: AzureWebApp@1
                   inputs:
                     azureSubscription: "Visual Studio Enterprise Subscription(e5855b08-7ae6-492b-b26a-0729c22fa918)"
                     appType: "webApp"
                     appName: "moviesFrontEnd"
-                    package: $(Pipeline.Workspace)/drop/**/*.zip
+                    package: "$(Pipeline.Workspace)/drop/**/*.zip"
