--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -35,7 +35,7 @@ stages:
           name: moviesagent
           demands:
             - Agent.Name -equals MoviesPipelineAgent
-        timeoutInMinutes: 30 
+        timeoutInMinutes: 30
 
         steps:
           - task: NodeTool@0
@@ -75,9 +75,19 @@ stages:
               artifactName: "drop"
               publishLocation: "Pipeline"
 
+  - stage: Approval
+    displayName: "Approval Before Deploy"
+    jobs:
+      - job: WaitForApproval
+        pool: server
+        steps:
+          - task: ManualValidation@0
+            inputs:
+              instructions: 'Please review the build artifacts and approve the deployment.'
+
   - stage: Deploy
     displayName: Production
-    dependsOn: Build
+    dependsOn: Approval
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
     jobs:
       - deployment: Deploy
@@ -99,4 +109,4 @@ stages:
                     azureSubscription: "Visual Studio Enterprise Subscription(e5855b08-7ae6-492b-b26a-0729c22fa918)"
                     appType: "webApp"
                     appName: "moviesFrontEnd"
-                    package: "$(Pipeline.Workspace)/drop/**/*.zip"
+                    package: "$(Pipeline.Workspace)/drop/**"
