--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -68,27 +68,33 @@ stages:
             displayName: "Build"
             continueOnError: false
 
+          - script: |
+              zip -r build.zip build
+            displayName: "Create ZIP package"
+
           - task: PublishPipelineArtifact@1
             displayName: "Publish Artifact"
             inputs:
-              targetPath: "$(System.DefaultWorkingDirectory)/build"
+              targetPath: "$(System.DefaultWorkingDirectory)/build.zip"
               artifactName: "drop"
               publishLocation: "Pipeline"
 
-  - stage: Approval
-    displayName: "Approval Before Deploy"
+  - stage: Deploy
+    displayName: Production
+    dependsOn: Build
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
     jobs:
-      - job: WaitForApproval
+      - job: ManualApproval
         pool: server
         steps:
           - task: ManualValidation@0
             inputs:
-              instructions: 'Please review the build artifacts and approve the deployment.'
+              instructions: 'Please approve or reject the deployment.'
 
   - stage: Deploy
-    displayName: Production
-    dependsOn: Approval
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    displayName: Deploy to Production
+    dependsOn: ManualApproval
+    condition: succeeded()
     jobs:
       - deployment: Deploy
         environment: "Production"
@@ -109,4 +115,4 @@ stages:
                     azureSubscription: "Visual Studio Enterprise Subscription(e5855b08-7ae6-492b-b26a-0729c22fa918)"
                     appType: "webApp"
                     appName: "moviesFrontEnd"
-                    package: "$(Pipeline.Workspace)/drop/**"
+                    package: "$(Pipeline.Workspace)/drop/build.zip"
