--- a/.ado/pipeline.yml
+++ b/.ado/pipeline.yml
@@ -69,7 +69,11 @@ stages:
             continueOnError: false
 
           - script: |
-              zip -r build.zip build
+              npm install node-zip
+            displayName: "Install Zip Utility"
+
+          - script: |
+              node -e "const fs = require('fs'); const path = require('path'); const Zip = require('node-zip'); const zip = new Zip(); const buildPath = path.join(__dirname, 'build'); const outputPath = path.join(__dirname, 'build.zip'); const addFiles = (dir, zipFolder) => { fs.readdirSync(dir).forEach(file => { const filePath = path.join(dir, file); const stats = fs.statSync(filePath); if (stats.isDirectory()) { const folder = zipFolder.folder(file); addFiles(filePath, folder); } else { zipFolder.file(file, fs.readFileSync(filePath)); } }); }; addFiles(buildPath, zip.folder('build')); fs.writeFileSync(outputPath, zip.generate({base64: false, compression: 'DEFLATE'}), 'binary');"
             displayName: "Create ZIP package"
 
           - task: PublishPipelineArtifact@1
